Fix edit news with image chooser

--- a/wagtailnews/templates/wagtailnews/edit.html
+++ b/wagtailnews/templates/wagtailnews/edit.html
@@ -53,6 +53,7 @@
 {% endblock %}
 {% block extra_js %}
     {% include "wagtailadmin/pages/_editor_js.html" %}
+    {{ form.media.js }}
     {% if do_preview %}
     <script>
     $(function() {
