fix for image chooser

--- a/wagtailnews/templates/wagtailnews/create.html
+++ b/wagtailnews/templates/wagtailnews/create.html
@@ -37,4 +37,5 @@
 {% endblock %}
 {% block extra_js %}
     {% include "wagtailadmin/pages/_editor_js.html" %}
+    {{ form.media.js }}
 {% endblock %}
